--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^4.17.2
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
+  modal_progress_hud_nsn: ^0.5.1
+  firebase_auth: ^4.19.4
 
 dev_dependencies:
   flutter_test:
