--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   modal_progress_hud_nsn: ^0.5.1
   firebase_auth: ^4.19.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
