--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   modal_progress_hud_nsn: ^0.5.1
   firebase_auth: ^4.19.4
   shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
+  conditional_builder_null_safety: ^0.0.6
 
 dev_dependencies:
   flutter_test:
