--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   conditional_builder_null_safety: ^0.0.6
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
